tests/checker/diagnostics/0751_fcm_pack_with_type_mismatch_10.ml.infer.expected
File "0751_fcm_pack_with_type_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0751_fcm_pack_with_type_mismatch_10 is not a valid module name.

File "0751_fcm_pack_with_type_mismatch_10.ml", line 11, characters 16-23:
11 | let _ = (module M_kappa : Box_kappa with type t = bool)
                     ^^^^^^^
Error: This expression has type (module Box_kappa with type t = bool)
       but an expression was expected of type
         (module Box_kappa with type t = M_kappa.t)
       Type bool is not compatible with type M_kappa.t = int
